[package]
name = "rust-http-sanner"
version = "0.1.0"
edition = "2024"
authors = ["zhuosanjin <zhuosanjin99@gmail.com>"]
github = "https://github.com/sanjin1688/rust-http-scanner"
license = "MIT"
description = "A simple Rust HTTP cli concurrent scanner. use Rust + Clap + Tokio"

[dependencies]
chrono = "0.4.42"
csv = "1.3"
colored = "2.1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5.50", features = ["derive"] }
futures = "0.3.31"
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.24.0"
